--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ JWT_SECRET=your-secret-key
 
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=123456789-abcdefghijklmnop.apps.googleusercontent.com
-
+OPENAI_API_KEY=your-openai-api-key-here
 # Server Port
 PORT=3002
